fixed low contrast accessibilty issue

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@ nav {
     background-color: #6e5c53 !important; /* Medium coffee brown for navbar */
 }
 
+.nav-link {
+    color: #fff !important
+}
+
 /* Navbar list and links */
 nav ul {
     list-style-type: none;
